--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "gulp": "^4.0.2",
+    "isotope-layout": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
